Improve AI Rewrite functionality with enhanced keyboard shortcut and selection handling

--- a/Django/frontend/index.html
+++ b/Django/frontend/index.html
@@ -283,7 +283,7 @@
                 </div>
                 <div class="floating-tool" id="aiRewriteBtn" title="AI Rewrite">
                     <i class="fas fa-robot"></i>
-                    <span class="shortcut-tooltip">AI Rewrite <span class="kbd">Ctrl</span>+<span class="kbd">R</span></span>
+                    <span class="shortcut-tooltip">AI Rewrite <span class="kbd">Ctrl</span>+<span class="kbd">G</span></span>
                 </div>
                 <div class="floating-tool" id="speakBtn" title="Speech to Text">
                     <i class="fas fa-microphone"></i>
